cargo-features = ["edition2024"]

[package]
name = "moovolt-backend-csms"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7", features = ["ws", "macros"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
chrono = "0.4"
dotenv-linter = "3.3"
dotenvy_macro = "0.15"
rust-ocpp = { version = "1.0.0", default-features = false, features = ["v1_6"] }
serde = "1"
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread"] }
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
headers = "0.4"
strum_macros = "0.26"
owo-colors = { version = "4", features = ["supports-color", "supports-colors"] }
tracing-appender = "0.2"
